--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <header>
         <div class="container">
             <h1> Game Shop</h1>
-            <ul>
-                <li>
-                    <a href="About"> Sobre nós</a>
-                </li>
-                <li>
-                    <a href="Contact"> Contato</a>
-                </li>
-            </ul>
-        </div>
-    </header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="About"> Sobre nós</a>
+                    </li>
+                    <li>
+                        <a href="Contact"> Contato</a>
+                    </li>
+                </ul>
+                </nav>
+            </div>
+        </header>
 </body>
 </html>
