--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Shop - A sua loja de Games</title>
     <link rel="stylesheet" href="./main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
+
 </head>
 <body>
     <header>
@@ -22,5 +27,24 @@
                 </nav>
             </div>
         </header>
+        <section>
+            <div class="container">
+                <img class="store-front" src="./images/loja.jpg" alt="Fachada da loja game shop">
+                <div>
+                    <h2>Sobre a loja</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi dignissimos, nobis sed ea consequatur ratione eum eaque a aperiam, blanditiis quam aliquam, vitae natus. Quaerat libero est eius itaque deleniti?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat in eaque, consectetur quia quaerat reiciendis placeat eum blanditiis possimus error itaque, perferendis nisi veniam, voluptas distinctio. Consectetur neque fuga fugiat!
+                    </p>
+                    <ul class="brands-list">
+                        <li> <img src="./images/nintendo.png"/></li>
+                        <li> <img src="./images/xbox.png"/></li>
+                        <li> <img src="./images/playstation.png"/></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
