--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="About"> Sobre nós</a>
+                        <a href="about"> Sobre nós</a>
                     </li>
                     <li>
-                        <a href="Contact"> Contato</a>
+                        <a href="contact"> Contato</a>
                     </li>
                 </ul>
                 </nav>
@@ -43,6 +43,46 @@
                         <li> <img src="./images/xbox.png"/></li>
                         <li> <img src="./images/playstation.png"/></li>
                     </ul>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="container">
+                <h2>Contato</h2>
+                <div class="contact-methods">
+                    <div>
+                        <h3>Fale conosco</h3>
+                        <form>
+                            <input type="text" placeholder="Seu nome" required />
+                            <input type="email" placeholder="Seu e-mail" required />
+                            <input type="tel" placeholder="Seu telefone (opcional)" />
+                            <textarea placeholder="Sua mensagem" required> </textarea>
+                            <button type="submit">Enviar</button>
+                        </form>
+                        </div>
+                    <div>
+                        <h3>Nos acompanhe</h3>
+                        <ul class="social-links">
+                            <li>
+                                <a href="#" title="Siga-nos no Instagram"></a>
+                                <img src="./images/instagram.png" alt="logo do instagram">
+                            </li>
+                            <li>
+                                <a href="#" title="Siga-nos no Facebook"></a>
+                                <img src="./images/facebook.png" alt="logo do facebook">
+                            </li>
+                            <li>
+                                <a href="#" title="Visite nosso canal no YouTube"></a>
+                                <img src="./images/youtube.png" alt="logo do youtube">
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Venha até nós</h3>
+                        <p> 
+                            Street Store nº 321, Game Village - Tokio/Japan 
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
