--- a/index.html
+++ b/index.html
@@ -86,5 +86,12 @@
                 </div>
             </div>
         </section>
+        <footer> 
+            <div class="container">
+                <p>
+                    &copy; Game Shop - Todos os direitos reservados - 2024
+                </p>
+            </div>
+        </footer>
 </body>
 </html>
